BF-604 preserve deterministic source ordering